--- a/compilador/compilador.html
+++ b/compilador/compilador.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/compilador2.css">
+    <link rel="stylesheet" href="css/compilador.css">
     <link rel="stylesheet" href="./js/lib/codemirror.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"> 
     <title>Compilador</title>
@@ -62,6 +62,6 @@
      
      <script src="./js/lib/codemirror.js"></script>
      <script src="./js/mode/sql/sql.js"></script>
-     <script src="./js/numeracion.js" ></script>
+     <script src="./js/Compilador.js" ></script>
 </body>
 </html>
