Cambio titulo dashboard

--- a/compilador/maestroLista.html
+++ b/compilador/maestroLista.html
@@ -18,7 +18,7 @@
                     <ul class="navbar-list">
                         <li class="opciones">Inicio</li>
                         <li class="opciones">Contenido</li>
-                        <li class="opciones">Herramientas</li>
+                        <li class="opciones">Compilador</li>
                     </ul>		
                     <div class="navbar-profile">
                         <div class="navbar-notification">
