--- a/compilador/drag.html
+++ b/compilador/drag.html
@@ -17,24 +17,29 @@
     </div>
     <div class="table" id="t1" data-position="1">
         <div class="table-header">
-            <h2>Alumnos</h2>
+            <h2>Alumno</h2>
         </div>
         <div class="table-body">
             <div class="row-container" id="table-alumno">
                 <div class="row">
+                    <div class="fk-container"></div>
                     <p>idAlumno</p>
                 </div>
                 <div class="row">
-                    <p>perr</p>
+                    <div class="fk-container"></div>
+                    <p>nombreAlumno</p>
                 </div>
                 <div class="row">
-                    <p>dsf</p>
+                    <div class="fk-container"></div>
+                    <p>apellidosAlumno</p>
                 </div>
                 <div class="row">
-                    <p>aaaa</p>
+                    <div class="fk-container"></div>
+                    <p>fotoAlumno</p>
                 </div>
                 <div class="row">
-                    <p>eee</p>
+                    <div class="fk-container"></div>
+                    <p>carreraAlumno</p>
                 </div>
             </div>
         </div>
@@ -42,21 +47,25 @@
 
     <div class="table" id="t2" data-position="2">
         <div class="table-header">
-            <h2>Maestro</h2>
+            <h2>Clase</h2>
         </div>
         <div class="table-body">
             <div class="row-container" id="table-maestro">
                 <div class="row">
-                    <p>idMaestro</p>
+                    <div class="fk-container"></div>
+                    <p>idClase</p>
                 </div>
                 <div class="row">
-                    <p>idMaes</p>
+                    <div class="fk-container"></div>
+                    <p>salonClase</p>
                 </div>
                 <div class="row">
-                    <p>aestro</p>
+                    <div class="fk-container"></div>
+                    <p>horarioClase</p>
                 </div>
                 <div class="row">
-                    <p>stro</p>
+                    <div class="fk-container"></div>
+                    <p>status</p>
                 </div>
             </div>
         </div>
@@ -69,45 +78,51 @@
         <div class="table-body">
             <div class="row-container" id="table-clase">
                 <div class="row">
-                    <p>idClase</p>
+                    <div class="fk-container"></div>
+                    <p>idMaestro</p>
                 </div>
                 <div class="row">
-                    <p>asdasdasd</p>
+                    <div class="fk-container"></div>
+                    <p>nombreMaestro</p>
                 </div>
                 <div class="row">
-                    <p>324</p>
+                    <div class="fk-container"></div>
+                    <p>apellidoMaestro</p>
                 </div>
                 <div class="row">
-                    <p>fd</p>
+                    <div class="fk-container"></div>
+                    <p>fotoMaestro</p>
                 </div>
-                <div class="row">
-                    <p>fd</p>
-                </div>
+                
             </div>
         </div>
     </div>
 
-    <div class="table" id="t4" data-position="4" style="position: absolute; top: 600px; left: 500px;">
+    <!-- <div class="table" id="t4" data-position="4" style="position: absolute; top: 600px; left: 500px;">
         <div class="table-header">
             <h2>Maestro</h2>
         </div>
         <div class="table-body">
             <div class="row-container" id="table-xD">
                 <div class="row">
+                    <div class="fk-container"></div>
                     <p>idClase</p>
                 </div>
                 <div class="row">
+                    <div class="fk-container"></div>
                     <p>asdasdasd</p>
                 </div>
                 <div class="row">
+                    <div class="fk-container"></div>
                     <p>324</p>
                 </div>
                 <div class="row">
+                    <div class="fk-container"></div>
                     <p>fd</p>
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
     <script src="js/drag.js"></script>
 
