--- a/compilador/drag.html
+++ b/compilador/drag.html
@@ -14,7 +14,9 @@
     <div style=" top: 268px; left: 522.96875px; background-color: green;"></div>
     <div class="main">
         <div id="svgContainer"></div>
+       
     </div>
+    <button id="reset" onclick="reset()">Regresar</button>
     <div class="table" id="t1" data-position="1">
         <div class="table-header">
             <h2>Alumno</h2>
